Fixed other info grid to align properly

--- a/style/components/_otherInfoElement.scss
+++ b/style/components/_otherInfoElement.scss
@@ -11,12 +11,10 @@
 .article-info-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
   gap: 16px;
 
   @include devices(desktop) {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
   }
 }
 
